# promptsack

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bundle-ui.mjs  copy-renderer.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/vault/: crypto.rs  embed.rs  markdown.rs  mod.rs  schema.rs  store.rs
src/renderer/: app.ts  bridge.js  styles.css
src/shared/: api.ts  save-policy.ts  types.ts
tests/: contract.test.ts  save-policy.test.ts
ui/: index.html
