[package]
name = "promptsack"
version = "1.0.0"
description = "PromptSack — encrypted prompt catalog with MongrelDB + MiniLM search"
authors = ["Visorcraft"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.88"

[lib]
name = "promptsack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
base64 = "0.22"
keyring = "3.6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
fastembed = "5"
# Native MongrelDB kit (Rust) — path to sibling monorepo when present, else crates.io
mongreldb-kit = { version = "0.60.3", features = [] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
